# rust-dependency-injection-proof-of-concept

./: Cargo.toml  README.md
examples/: example.rs  example_no_macro.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
