[workspace]
members = [".", "macros"]

[package]
name = "dipoc"
description = "Dependency injection frameworc proof-of-concept"
version = "0.1.0"
authors = ["Kangwook Lee <pbzweihander@gmail.com>"]
edition = "2018"
license = "Unlicense"
publish = false

[dependencies]
dipoc-macros = { path = "macros", version = "0.1.0" }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
